# app/api/v1/endpoints/data_endpoint.py
@@ -82,8 +82,6 @@ class DataEndpoint:
                     "nf_entities_value": row["nf_entities_value"],
                     "nf_tags_id": row["nf_tags_id"],
                     "tag_name": row["tag_name"],
-                    "workspace_id": row["workspace_id"],
-                    "created_by": row["created_by"],
                     "is_active": row["is_active"],
                     "status": row["status"],
                     "created_at": row["created_at"],
@@ -150,8 +148,6 @@ class DataEndpoint:
                 "nf_entities_value": row["nf_entities_value"],
                 "nf_tags_id": row["nf_tags_id"],
                 "tag_name": row["tag_name"],
-                "workspace_id": row["workspace_id"],
-                "created_by": row["created_by"],
                 "is_active": row["is_active"],
                 "status": row["status"],
                 "created_at": row["created_at"],
